# mem-agent

./: .gitignore  Cargo.toml  Makefile  README.md
crates/mem-agent-lib/: Cargo.toml
crates/mem-agent-lib/src/: agent.rs  cgroup.rs  compact.rs  memcg.rs  mglru.rs  psi.rs
crates/protocols/: Cargo.toml  build.rs
crates/protocols/src/protos/: mem-agent.proto
crates/share/: Cargo.toml
crates/share/src/: lib.rs  logger.rs  option.rs  rpc.rs
example/: Cargo.toml  srv.rs
example/share/: rpc.rs
src/: agent.rs  cgroup.rs  memcg.rs  mglru.rs
