[package]
name = "share"
version = "0.1.0"
edition = "2021"

[dependencies]
slog-scope = "4.1.2"
slog-term = "2.9.0"
slog-async = "2.7"
structopt = "0.3"
anyhow = "1.0"
libc = "0.2"
page_size = "0.6"
chrono = "0.4"
maplit = "1.0"
ttrpc = { version = "0.8", features = ["async"] }
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1"
byteorder = "1.5"
protobuf = "3.7"
once_cell = "1.16"
mem-agent-lib = { path = "../mem-agent-lib" }
protocols = { path = "../protocols" }

[dependencies.slog]
version = "2.7"
features = ["release_max_level_trace", "max_level_trace"]
